--- a/locales/en.json
+++ b/locales/en.json
@@ -1,10 +1,7 @@
 {
   "common": {
-    "dark": "Dark",
     "languages": "Language",
-    "light": "Light",
     "no": "No",
-    "system": "System",
     "yes": "Yes"
   },
   "layouts": {
@@ -15,5 +12,10 @@
     "home": "Home page",
     "languageSelector": "Language selector",
     "themeSelector": "Theme selector"
+  },
+  "theme": {
+    "auto": "Auto",
+    "dark": "Dark",
+    "light": "Light"
   }
 }
