feat: Add a button to encourage scrolling

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,5 +17,8 @@
     "auto": "Auto",
     "dark": "Dark",
     "light": "Light"
+  },
+  "miscellaneous": {
+    "scrollToContent": "Scroll to content"
   }
 }
