--- a/locales/fr.json
+++ b/locales/fr.json
@@ -17,5 +17,8 @@
     "auto": "Auto",
     "dark": "Sombre",
     "light": "Claire"
+  },
+  "miscellaneous": {
+    "scrollToContent": "Aller au contenu"
   }
 }
