refactor: Refactor music page WIP

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,7 +14,7 @@
     "about": "About page",
     "home": "Home page",
     "languageSelector": "Language selector",
-    "music": "Music page",
+    "lab": "Lab page",
     "themeSelector": "Theme selector"
   },
   "theme": {
