--- a/locales/fr.json
+++ b/locales/fr.json
@@ -14,7 +14,7 @@
     "about": "Page d'info",
     "home": "Page d'accueil",
     "languageSelector": "Sélecteur de langue",
-    "music": "Page musique",
+    "lab": "Page lab",
     "themeSelector": "Sélecteur de thème"
   },
   "theme": {
