feat: Add visual effects into hero component

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -26,7 +26,7 @@
       "nowPlaying": "En cours de lecture",
       "orderedByDate": "Trié par date",
       "scrobbles": "Scrobbles",
-      "scrobblesHistory": "Scrobbles historique",
+      "scrobblesHistory": "Historique d'écoute",
       "tracksPerPage": "{n} pistes par pages"
     }
   },
