--- a/locales/en.json
+++ b/locales/en.json
@@ -26,7 +26,7 @@
       "nowPlaying": "Now playing",
       "orderedByDate": "",
       "scrobbles": "Scrobbles",
-      "scrobblesHistory": "Scrobbles history",
+      "scrobblesHistory": "Listening history",
       "tracksPerPage": ""
     }
   },
