--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,6 +10,7 @@
     "title": "Pascal Achard - {title}"
   },
   "miscellaneous": {
+    "contactMe": "Contactez moi",
     "scrollToContent": "Aller au contenu"
   },
   "navigation": {
