feat: WIP - Add "reading" page

--- a/locales/en.json
+++ b/locales/en.json
@@ -16,6 +16,7 @@
   "navigation": {
     "about": "About page",
     "home": "Home page",
+    "reading": "Reading page",
     "lab": "Lab page",
     "languageSelector": "Language selector",
     "themeSelector": "Theme selector"
