--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "clearFilters": "Clear filters",
     "go": "Go",
     "goToPage": "Go to page",
     "languages": "Language",
