--- a/locales/fr.json
+++ b/locales/fr.json
@@ -6,6 +6,7 @@
     "languages": "Langue",
     "loadMore": "Charger la suite",
     "no": "Non",
+    "noData": "Pas de données",
     "yes": "Oui"
   },
   "layouts": {
@@ -47,6 +48,7 @@
         },
         "statusLabel": "Statut"
       },
+      "filtersTooRestrictive": "🤔 Filtres trop restrictifs ?",
       "sort": {
         "createdTime": "Date de création",
         "lastEditedTime": "Date de dernière édition",
