--- a/locales/en.json
+++ b/locales/en.json
@@ -1,5 +1,6 @@
 {
   "common": {
+    "article": "Article | Articles",
     "clearFilters": "Clear filters",
     "go": "Go",
     "goToPage": "Go to page",
@@ -38,8 +39,14 @@
       "articleList": "Article list",
       "bdd": "Data base",
       "filters": {
+        "message": {
+          "sortedBy": "sort by {0}",
+          "withSearch": "matching {0}",
+          "withStatus": "with the status {0}",
+          "withTags": "integrating tags {0}"
+        },
         "pageSizes": "Articles by page",
-        "searchPlaceHolder": "Search an anrticle",
+        "searchPlaceHolder": "Search an article",
         "status": {
           "all": "All",
           "canceled": "Canceled",
