feat: Split dependencies table into two tables
One table for dev deps and another for deps

--- a/locales/en.json
+++ b/locales/en.json
@@ -31,6 +31,10 @@
       "sorry": "Sorry, that page doesn't exist.",
       "title": "404!"
     },
+    "about": {
+      "dependencies": "Dependencies",
+      "devDependencies": "Dev dependencies"
+    },
     "error": {
       "intro": "It looks like something broke.",
       "sorry": "Sorry about that 😕",
