feat: Add link to image

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,6 +15,7 @@
   },
   "miscellaneous": {
     "contactMe": "Contact me",
+    "linkToArticle": "Link to article",
     "scrollToContent": "Scroll to content"
   },
   "navigation": {
