--- a/locales/fr.json
+++ b/locales/fr.json
@@ -15,6 +15,7 @@
   },
   "miscellaneous": {
     "contactMe": "Contactez moi",
+    "linkToArticle": "Lien vers l'article",
     "scrollToContent": "Aller au contenu"
   },
   "navigation": {
